# ev_calculator

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yaml  nginx.conf  package-lock.json
src/: main.rs
src/components/: calculator.rs  default_layout.rs  layout.rs  mod.rs  not_found.rs
src/components/navbar/: component.rs  style.css
src/components/partials/: footer.rs  header.rs  mod.rs
