[package]
name = "ev_calculator"
version = "0.1.0"
authors = ["ActivistLime02 <27824978+ActivistLime02@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.6", features = ["router"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = ["router"] }
dioxus-sdk-storage = "0.7.0"
dioxus-free-icons = { version = "0.10", features = ["font-awesome-brands", "font-awesome-solid"] }

[features]
default = ["web"]
web = ["dioxus/web"]
